# 3DViewer

./: .gitignore  Makefile  README.md
3DViewerVitAlina/: CMakeLists.txt  main.cpp  resources.qrc
3DViewerVitAlina/Commands/: Command.h  convertdatacommand.h  convertmaterialscommand.h  macroCommand.h  parsefilecommand.h  processNewFileCommand.h
3DViewerVitAlina/Controllers/: mainviewcontroller.cpp  mainviewcontroller.h
3DViewerVitAlina/Models/: camera.cpp  camera.h  meshmodel.cpp  meshmodel.h  mtlmodel.h  objectmodel.cpp  objectmodel.h  scenemodel.cpp  scenemodel.h
3DViewerVitAlina/Views/: builder.cpp  builder.h  config.cpp  config.h  director.cpp  director.h  face.cpp  face.h  mainview.cpp  mainview.h  scene.cpp  scene.h
3DViewerVitAlina/forms/: mainview.ui
3DViewerVitAlina/shaders/: fragmentshader.fs  lightfragmentshader.fs  lightshader.frag  lightshader.vert  lightvertexshader.vs
